compiler/parser.output
Useless nonterminals

   array_items


Terminals which are not used

   COLON


Useless rules

  112 array_items: expr
  113            | array_items COMMA expr


State 2 conflicts: 2 shift/reduce
State 13 conflicts: 1 shift/reduce
State 23 conflicts: 3 shift/reduce
State 32 conflicts: 6 reduce/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 6 reduce/reduce
State 35 conflicts: 1 shift/reduce
State 38 conflicts: 2 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 2 shift/reduce
State 42 conflicts: 4 shift/reduce
State 43 conflicts: 3 shift/reduce
State 50 conflicts: 6 reduce/reduce
State 68 conflicts: 8 shift/reduce
State 69 conflicts: 1 shift/reduce
State 89 conflicts: 3 shift/reduce
State 90 conflicts: 3 reduce/reduce
State 91 conflicts: 3 reduce/reduce
State 92 conflicts: 6 reduce/reduce
State 93 conflicts: 6 reduce/reduce
State 94 conflicts: 6 reduce/reduce
State 108 conflicts: 1 shift/reduce
State 110 conflicts: 2 shift/reduce
State 116 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 133 conflicts: 2 shift/reduce
State 138 conflicts: 2 shift/reduce
State 139 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 172 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: top_level_list

    2 top_level_list: top_level
    3               | top_level_list top_level

    4 top_level: func_def
    5          | var_decl

    6 func_def: HASH IDENTIFIER LPAREN param_list_opt RPAREN block
    7         | HASH IDENTIFIER LPAREN param_list_opt RPAREN ARROW expr DOT
    8         | HASH IDENTIFIER DOT IDENTIFIER LPAREN param_list_opt RPAREN block

    9 param_list_opt: /* empty */
   10               | param_list

   11 param_list: IDENTIFIER
   12           | param_list COMMA IDENTIFIER

   13 block: LBRACE statement_list RBRACE

   14 statement_list: /* empty */
   15               | statement_list statement

   16 statement: var_decl
   17          | loop_stmt
   18          | for_stmt
   19          | RETURN expr DOT
   20          | RETURN expr WHEN expr DOT
   21          | RETURN DOT
   22          | BREAK DOT
   23          | BREAK WHEN expr DOT
   24          | expr DOT
   25          | expr WHEN expr DOT
   26          | expr UNLESS expr DOT
   27          | block

   28 var_decl: IDENTIFIER ASSIGN_DECL expr DOT
   29         | IDENTIFIER ASSIGN expr DOT
   30         | postfix_expr ASSIGN expr DOT
   31         | postfix_expr ASSIGN_DECL expr DOT

   32 loop_stmt: LOOP block
   33          | LOOP WHEN expr block

   34 for_stmt: FOR IDENTIFIER IN expr block

   35 expr: cond_expr
   36     | expr PIPE cond_expr
   37     | expr PIPE pattern_match

   38 cond_expr: coalesce_expr
   39          | coalesce_expr IF coalesce_expr ELSE cond_expr

   40 coalesce_expr: or_expr
   41              | coalesce_expr COALESCE or_expr

   42 or_expr: and_expr
   43        | or_expr OR and_expr

   44 and_expr: eq_expr
   45         | and_expr AND eq_expr

   46 eq_expr: rel_expr
   47        | eq_expr EQ rel_expr
   48        | eq_expr NE rel_expr

   49 rel_expr: add_expr
   50         | rel_expr LT add_expr
   51         | rel_expr GT add_expr
   52         | rel_expr LE add_expr
   53         | rel_expr GE add_expr

   54 add_expr: mul_expr
   55         | add_expr PLUS mul_expr
   56         | add_expr MINUS mul_expr

   57 mul_expr: unary_expr
   58         | mul_expr STAR unary_expr
   59         | mul_expr SLASH unary_expr
   60         | mul_expr PERCENT unary_expr

   61 unary_expr: postfix_expr
   62           | MINUS unary_expr
   63           | NOT unary_expr
   64           | QUESTION unary_expr

   65 postfix_expr: primary_expr
   66             | postfix_expr LBRACKET expr RBRACKET
   67             | postfix_expr ARROW_MEMBER IDENTIFIER
   68             | postfix_expr BANG
   69             | postfix_expr QUESTION

   70 primary_expr: INT_LITERAL
   71             | STRING_LITERAL
   72             | TRUE
   73             | FALSE
   74             | IDENTIFIER
   75             | AT
   76             | AT IDENTIFIER
   77             | UNDERSCORE
   78             | LPAREN expr RPAREN
   79             | wand_call
   80             | lambda
   81             | LBRACKET expr_list_opt RBRACKET
   82             | LBRACE RBRACE
   83             | add_expr RANGE add_expr

   84 wand_call: SLASH IDENTIFIER wand_args
   85          | SLASH IDENTIFIER SLASH
   86          | SLASH IDENTIFIER

   87 wand_args: SLASH wand_arg
   88          | wand_args SLASH wand_arg

   89 wand_arg: INT_LITERAL
   90         | STRING_LITERAL
   91         | TRUE
   92         | FALSE
   93         | IDENTIFIER
   94         | AT
   95         | AT IDENTIFIER
   96         | UNDERSCORE
   97         | MINUS wand_arg
   98         | LPAREN expr RPAREN
   99         | wand_arg ARROW_MEMBER IDENTIFIER
  100         | wand_arg LBRACKET expr RBRACKET

  101 lambda: BACKSLASH LPAREN param_list_opt RPAREN ARROW expr
  102       | BACKSLASH LPAREN param_list_opt RPAREN block

  103 pattern_match: LBRACE match_arms RBRACE

  104 match_arms: match_arm
  105           | match_arms match_arm

  106 match_arm: expr ARROW expr
  107          | UNDERSCORE ARROW expr

  108 expr_list_opt: /* empty */
  109              | expr_list

  110 expr_list: expr
  111          | expr_list COMMA expr


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 70 89
IDENTIFIER (259) 6 7 8 11 12 28 29 34 67 74 76 84 85 86 93 95 99
STRING_LITERAL (260) 71 90
LOOP (261) 32 33
FOR (262) 34
IN (263) 34
IF (264) 39
ELSE (265) 39
WHEN (266) 20 23 25 33
UNLESS (267) 26
AND (268) 45
OR (269) 43
NOT (270) 63
TRUE (271) 72 91
FALSE (272) 73 92
ASSIGN_DECL (273) 28 31
RETURN (274) 19 20 21
BREAK (275) 22 23
ARROW (276) 7 101 106 107
RANGE (277) 83
COALESCE (278) 41
ARROW_MEMBER (279) 67 99
EQ (280) 47
NE (281) 48
LE (282) 52
GE (283) 53
LT (284) 50
GT (285) 51
DOT (286) 7 8 19 20 21 22 23 24 25 26 28 29 30 31
COMMA (287) 12 111
COLON (288)
ASSIGN (289) 29 30
PLUS (290) 55
MINUS (291) 56 62 97
STAR (292) 58
SLASH (293) 59 84 85 86 87 88
PERCENT (294) 60
LPAREN (295) 6 7 8 78 98 101 102
RPAREN (296) 6 7 8 78 98 101 102
LBRACE (297) 13 82 103
RBRACE (298) 13 82 103
LBRACKET (299) 66 81 100
RBRACKET (300) 66 81 100
PIPE (301) 36 37
HASH (302) 6 7 8
AT (303) 75 76 94 95
QUESTION (304) 64 69
BANG (305) 68
BACKSLASH (306) 101 102
UNDERSCORE (307) 77 96 107
UMINUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
top_level_list (56)
    on left: 2 3, on right: 1 3
top_level (57)
    on left: 4 5, on right: 2 3
func_def (58)
    on left: 6 7 8, on right: 4
param_list_opt (59)
    on left: 9 10, on right: 6 7 8 101 102
param_list (60)
    on left: 11 12, on right: 10 12
block (61)
    on left: 13, on right: 6 8 27 32 33 34 102
statement_list (62)
    on left: 14 15, on right: 13 15
statement (63)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27, on right: 15
var_decl (64)
    on left: 28 29 30 31, on right: 5 16
loop_stmt (65)
    on left: 32 33, on right: 17
for_stmt (66)
    on left: 34, on right: 18
expr (67)
    on left: 35 36 37, on right: 7 19 20 23 24 25 26 28 29 30 31 33
    34 36 37 66 78 98 100 101 106 107 110 111
cond_expr (68)
    on left: 38 39, on right: 35 36 39
coalesce_expr (69)
    on left: 40 41, on right: 38 39 41
or_expr (70)
    on left: 42 43, on right: 40 41 43
and_expr (71)
    on left: 44 45, on right: 42 43 45
eq_expr (72)
    on left: 46 47 48, on right: 44 45 47 48
rel_expr (73)
    on left: 49 50 51 52 53, on right: 46 47 48 50 51 52 53
add_expr (74)
    on left: 54 55 56, on right: 49 50 51 52 53 55 56 83
mul_expr (75)
    on left: 57 58 59 60, on right: 54 55 56 58 59 60
unary_expr (76)
    on left: 61 62 63 64, on right: 57 58 59 60 62 63 64
postfix_expr (77)
    on left: 65 66 67 68 69, on right: 30 31 61 66 67 68 69
primary_expr (78)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83,
    on right: 65
wand_call (79)
    on left: 84 85 86, on right: 79
wand_args (80)
    on left: 87 88, on right: 84 88
wand_arg (81)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100, on right: 87 88
    97 99 100
lambda (82)
    on left: 101 102, on right: 80
pattern_match (83)
    on left: 103, on right: 37
match_arms (84)
    on left: 104 105, on right: 103 105
match_arm (85)
    on left: 106 107, on right: 104 105
expr_list_opt (86)
    on left: 108 109, on right: 81
expr_list (87)
    on left: 110 111, on right: 109 111


state 0

    0 $accept: . program $end
    1 program: . top_level_list
    2 top_level_list: . top_level
    3               | . top_level_list top_level
    4 top_level: . func_def
    5          | . var_decl
    6 func_def: . HASH IDENTIFIER LPAREN param_list_opt RPAREN block
    7         | . HASH IDENTIFIER LPAREN param_list_opt RPAREN ARROW expr DOT
    8         | . HASH IDENTIFIER DOT IDENTIFIER LPAREN param_list_opt RPAREN block
   28 var_decl: . IDENTIFIER ASSIGN_DECL expr DOT
   29         | . IDENTIFIER ASSIGN expr DOT
   30         | . postfix_expr ASSIGN expr DOT
   31         | . postfix_expr ASSIGN_DECL expr DOT
   54 add_expr: . mul_expr
   55         | . add_expr PLUS mul_expr
   56         | . add_expr MINUS mul_expr
   57 mul_expr: . unary_expr
   58         | . mul_expr STAR unary_expr
   59         | . mul_expr SLASH unary_expr
   60         | . mul_expr PERCENT unary_expr
   61 unary_expr: . postfix_expr
   62           | . MINUS unary_expr
   63           | . NOT unary_expr
   64           | . QUESTION unary_expr
   65 postfix_expr: . primary_expr
   66             | . postfix_expr LBRACKET expr RBRACKET
   67             | . postfix_expr ARROW_MEMBER IDENTIFIER
   68             | . postfix_expr BANG
   69             | . postfix_expr QUESTION
   70 primary_expr: . INT_LITERAL
   71             | . STRING_LITERAL
   72             | . TRUE
   73             | . FALSE
   74             | . IDENTIFIER
   75             | . AT
   76             | . AT IDENTIFIER
   77             | . UNDERSCORE
   78             | . LPAREN expr RPAREN
   79             | . wand_call
   80             | . lambda
   81             | . LBRACKET expr_list_opt RBRACKET
   82             | . LBRACE RBRACE
   83             | . add_expr RANGE add_expr
   84 wand_call: . SLASH IDENTIFIER wand_args
   85          | . SLASH IDENTIFIER SLASH
   86          | . SLASH IDENTIFIER
  101 lambda: . BACKSLASH LPAREN param_list_opt RPAREN ARROW expr
  102       | . BACKSLASH LPAREN param_list_opt RPAREN block

    INT_LITERAL     shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    NOT             shift, and go to state 4
    TRUE            shift, and go to state 5
    FALSE           shift, and go to state 6
    MINUS           shift, and go to state 7
    SLASH           shift, and go to state 8
    LPAREN          shift, and go to state 9
    LBRACE          shift, and go to state 10
    LBRACKET        shift, and go to state 11
    HASH            shift, and go to state 12
    AT              shift, and go to state 13
    QUESTION        shift, and go to state 14
    BACKSLASH       shift, and go to state 15
    UNDERSCORE      shift, and go to state 16

    program         go to state 17
    top_level_list  go to state 18
    top_level       go to state 19
    func_def        go to state 20
    var_decl        go to state 21
    add_expr        go to state 22
    mul_expr        go to state 23
    unary_expr      go to state 24
    postfix_expr    go to state 25
    primary_expr    go to state 26
    wand_call       go to state 27
    lambda          go to state 28


state 1

   70 primary_expr: INT_LITERAL .

    $default  reduce using rule 70 (primary_expr)


state 2

   28 var_decl: IDENTIFIER . ASSIGN_DECL expr DOT
   29         | IDENTIFIER . ASSIGN expr DOT
   74 primary_expr: IDENTIFIER .  [IF, WHEN, UNLESS, AND, OR, ASSIGN_DECL, RANGE, COALESCE, ARROW_MEMBER, EQ, NE, LE, GE, LT, GT, DOT, ASSIGN, PLUS, MINUS, STAR, SLASH, PERCENT, LBRACKET, PIPE, QUESTION, BANG]

    ASSIGN_DECL  shift, and go to state 29
    ASSIGN       shift, and go to state 30

    ASSIGN_DECL  [reduce using rule 74 (primary_expr)]
    ASSIGN       [reduce using rule 74 (primary_expr)]
    $default     reduce using rule 74 (primary_expr)


state 3

   71 primary_expr: STRING_LITERAL .

    $default  reduce using rule 71 (primary_expr)


state 4

   54 add_expr: . mul_expr
   55         | . add_expr PLUS mul_expr
   56         | . add_expr MINUS mul_expr
   57 mul_expr: . unary_expr
   58         | . mul_expr STAR unary_expr
   59         | . mul_expr SLASH unary_expr
   60         | . mul_expr PERCENT unary_expr
   61 unary_expr: . postfix_expr
   62           | . MINUS unary_expr
   63           | . NOT unary_expr
   63           | NOT . unary_expr
   64           | . QUESTION unary_expr
   65 postfix_expr: . primary_expr
   66             | . postfix_expr LBRACKET expr RBRACKET
   67             | . postfix_expr ARROW_MEMBER IDENTIFIER
   68             | . postfix_expr BANG
   69             | . postfix_expr QUESTION
   70 primary_expr: . INT_LITERAL
   71             | . STRING_LITERAL
   72             | . TRUE
   73             | . FALSE
   74             | . IDENTIFIER
   75             | . AT
   76             | . AT IDENTIFIER
   77             | . UNDERSCORE
   78             | . LPAREN expr RPAREN
   79             | . wand_call
   80             | . lambda
   81             | . LBRACKET expr_list_opt RBRACKET
   82             | . LBRACE RBRACE
   83             | . add_expr RANGE add_expr
   84 wand_call: . SLASH IDENTIFIER wand_args
   85          | . SLASH IDENTIFIER SLASH
   86          | . SLASH IDENTIFIER
  101 lambda: . BACKSLASH LPAREN param_list_opt RPAREN ARROW expr
  102       | . BACKSLASH LPAREN param_list_opt RPAREN block

    INT_LITERAL     shift, and go to state 1
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 3
    NOT             shift, and go to state 4
    TRUE            shift, and go to state 5
    FALSE           shift, and go to state 6
    MINUS           shift, and go to state 7
    SLASH           shift, and go to state 8
    LPAREN          shift, and go to state 9
    LBRACE          shift, and go to state 10
    LBRACKET        shift, and go to state 11
    AT              shift, and go to state 13
    QUESTION        shift, and go to state 14
    BACKSLASH       shift, and go to state 15
    UNDERSCORE      shift, and go to state 16

    add_expr      go to state 22
    mul_expr      go to state 23
    unary_expr    go to state 32
    postfix_expr  go to state 33
    primary_expr  go to state 26
    wand_call     go to state 27
    lambda        go to state 28


state 5

   72 primary_expr: TRUE .

    $default  reduce using rule 72 (primary_expr)


state 6

   73 primary_expr: FALSE .

    $default  reduce using rule 73 (primary_expr)


state 7

   54 add_expr: . mul_expr
   55         | . add_expr PLUS mul_expr
   56         | . add_expr MINUS mul_expr
   57 mul_expr: . unary_expr
   58         | . mul_expr STAR unary_expr
   59         | . mul_expr SLASH unary_expr
   60         | . mul_expr PERCENT unary_expr
   61 unary_expr: . postfix_expr
   62           | . MINUS unary_expr
   62           | MINUS . unary_expr
   63           | . NOT unary_expr
   64           | . QUESTION unary_expr
   65 postfix_expr: . primary_expr
   66             | . postfix_expr LBRACKET expr RBRACKET
   67             | . postfix_expr ARROW_MEMBER IDENTIFIER
   68             | . postfix_expr BANG
   69             | . postfix_expr QUESTION
   70 primary_expr: . INT_LITERAL
   71             | . STRING_LITERAL
   72             | . TRUE
   73             | . FALSE
   74             | . IDENTIFIER
   75             | . AT
   76             | . AT IDENTIFIER
   77             | . UNDERSCORE
   78             | . LPAREN expr RPAREN
   79             | . wand_call
   80             | . lambda
   81             | . LBRACKET expr_list_opt RBRACKET
   82             | . LBRACE RBRACE
   83             | . add_expr RANGE add_expr
   84 wand_call: . SLASH IDENTIFIER wand_args
   85          | . SLASH IDENTIFIER SLASH
   86          | . SLASH IDENTIFIER
  101 lambda: . BACKSLASH LPAREN param_list_opt RPAREN ARROW expr
  102       | . BACKSLASH LPAREN param_list_opt RPAREN block

    INT_LITERAL     shift, and go to state 1
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 3
    NOT             shift, and go to state 4
    TRUE            shift, and go to state 5
    FALSE           shift, and go to state 6
    MINUS           shift, and go to state 7
    SLASH           shift, and go to state 8
    LPAREN          shift, and go to state 9
    LBRACE          shift, and go to state 10
    LBRACKET        shift, and go to state 11
    AT              shift, and go to state 13
    QUESTION        shift, and go to state 14
    BACKSLASH       shift, and go to state 15
    UNDERSCORE      shift, and go to state 16

    add_expr      go to state 22
    mul_expr      go to state 23
    unary_expr    go to state 34
    postfix_expr  go to state 33
    primary_expr  go to state 26
    wand_call     go to state 27
    lambda        go to state 28


state 8

   84 wand_call: SLASH . IDENTIFIER wand_args
   85          | SLASH . IDENTIFIER SLASH
   86          | SLASH . IDENTIFIER

    IDENTIFIER  shift, and go to state 35


state 9

   35 expr: . cond_expr
   36     | . expr PIPE cond_expr
   37     | . expr PIPE pattern_match
   38 cond_expr: . coalesce_expr
   39          | . coalesce_expr IF coalesce_expr ELSE cond_expr
   40 coalesce_expr: . or_expr
   41              | . coalesce_expr COALESCE or_expr
   42 or_expr: . and_expr
   43        | . or_expr OR and_expr
   44 and_expr: . eq_expr
   45         | . and_expr AND eq_expr
   46 eq_expr: . rel_expr
   47        | . eq_expr EQ rel_expr
   48        | . eq_expr NE rel_expr
   49 rel_expr: . add_expr
   50         | . rel_expr LT add_expr
   51         | . rel_expr GT add_expr
   52         | . rel_expr LE add_expr
   53         | . rel_expr GE add_expr
   54 add_expr: . mul_expr
   55         | . add_expr PLUS mul_expr
   56         | . add_expr MINUS mul_expr
   57 mul_expr: . unary_expr
   58         | . mul_expr STAR unary_expr
   59         | . mul_expr SLASH unary_expr
   60         | . mul_expr PERCENT unary_expr
   61 unary_expr: . postfix_expr
   62           | . MINUS unary_expr
   63           | . NOT unary_expr
   64           | . QUESTION unary_expr
   65 postfix_expr: . primary_expr
   66             | . postfix_expr LBRACKET expr RBRACKET
   67             | . postfix_expr ARROW_MEMBER IDENTIFIER
   68             | . postfix_expr BANG
   69             | . postfix_expr QUESTION
   70 primary_expr: . INT_LITERAL
   71             | . STRING_LITERAL
   72             | . TRUE
   73             | . FALSE
   74             | . IDENTIFIER
   75             | . AT
   76             | . AT IDENTIFIER
   77             | . UNDERSCORE
   78             | . LPAREN expr RPAREN
   78             | LPAREN . expr RPAREN
   79             | . wand_call
   80             | . lambda
   81             | . LBRACKET expr_list_opt RBRACKET
   82             | . LBRACE RBRACE
   83             | . add_expr RANGE add_expr
   84 wand_call: . SLASH IDENTIFIER wand_args
   85          | . SLASH IDENTIFIER SLASH
   86          | . SLASH IDENTIFIER
  101 lambda: . BACKSLASH LPAREN param_list_opt RPAREN ARROW expr
  102       | . BACKSLASH LPAREN param_list_opt RPAREN block
